





import java.util.List;
import java.util.ArrayList;

public class VariableDeclarationScope  {




    public VariableDeclarationScope(
    ) {
    }




}