





import java.util.List;
import java.util.ArrayList;

public class hlp_Assignment extends Statement {






    private hlp_Expression hlp_expression;


    public hlp_Assignment(
    ) {
        super(
        );
    }



    public hlp_Expression getHlp_expression() {
        return hlp_expression;
    }

    public void setHlp_expression(hlp_Expression hlp_expression) {
        this.hlp_expression = hlp_expression;
    }

}