





import java.util.List;
import java.util.ArrayList;

public class hlp_AtomicExpression extends Expression {




    public hlp_AtomicExpression(
    ) {
        super(
        );
    }




}