





import java.util.List;
import java.util.ArrayList;

public class hlp_BinaryExpression extends Expression {




    public hlp_BinaryExpression(
    ) {
        super(
        );
    }




}