





import java.util.List;
import java.util.ArrayList;

public class hlp_HighLevelProgram extends Nameable, VariableDeclarationScope {




    public hlp_HighLevelProgram(
    ) {
        super(
        );
    }




}