





import java.util.List;
import java.util.ArrayList;

public class hlp_IfStatement extends Statement {






    private hlp_Block hlp_block;




    private hlp_Block hlp_block;


    public hlp_IfStatement(
    ) {
        super(
        );
    }



    public hlp_Block getHlp_block() {
        return hlp_block;
    }

    public void setHlp_block(hlp_Block hlp_block) {
        this.hlp_block = hlp_block;
    }
    public hlp_Block getHlp_block() {
        return hlp_block;
    }

    public void setHlp_block(hlp_Block hlp_block) {
        this.hlp_block = hlp_block;
    }

}