





import java.util.List;
import java.util.ArrayList;

public class hlp_Nameable  {

    private String name;



    public hlp_Nameable(
        String name    ) {
        this.name = name;
    }


    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }


}