





import java.util.List;
import java.util.ArrayList;

public class hlp_SynchronizedStatement extends Statement {




    public hlp_SynchronizedStatement(
    ) {
        super(
        );
    }




}