





import java.util.List;
import java.util.ArrayList;

public class hlp_Task extends Nameable, VariableDeclarationScope {






    private hlp_HighLevelProgram hlp_highlevelprogram;


    public hlp_Task(
    ) {
        super(
        );
    }



    public hlp_HighLevelProgram getHlp_highlevelprogram() {
        return hlp_highlevelprogram;
    }

    public void setHlp_highlevelprogram(hlp_HighLevelProgram hlp_highlevelprogram) {
        this.hlp_highlevelprogram = hlp_highlevelprogram;
    }

}