





import java.util.List;
import java.util.ArrayList;

public class hlp_UnaryMinusExpression extends UnaryExpression {




    public hlp_UnaryMinusExpression(
    ) {
        super(
        );
    }




}