





import java.util.List;
import java.util.ArrayList;

public class hlp_Variable extends Nameable {




    public hlp_Variable(
    ) {
        super(
        );
    }




}