





import java.util.List;
import java.util.ArrayList;

public class hlp_VariableDeclarationScope  {




    public hlp_VariableDeclarationScope(
    ) {
    }




}